crates/vize_atelier_dom/tests/snapshots/dom_snapshot__static_element__div_with_text.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(\"<div>hello</div>\")"
---
const { openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, "hello"))
}
