crates/vize_atelier_dom/tests/snapshots/dom_snapshot__static_element__nested_elements.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(\"<div><span>hello</span></div>\")"
---
const { openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("span", null, "hello")

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, [
    _hoisted_1
  ]))
}
